# specter

./: .gitignore  LICENSE  manage.py  pyproject.toml
main/: admin.py  file_parser.py  models.py
main/migrations/: 0001_initial.py  0002_auto_20210609_2021.py  0003_device_name.py  0004_auto_20210614_0008.py  0005_auto_20210614_2148.py  0006_spectraldata_set.py  0007_spectraldata_phase.py  0008_spectraldata_light_source.py
scripts/: format  lint
specter/: asgi.py  settings.py  urls.py  wsgi.py
templates/: spectral_data.html
