[tool.poetry]
name = "specter"
version = "0.1.0"
description = "A database interface fo spectral data"
authors = ["vonabarak <bobr@vonabarak.ru>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
